<resources>
    <string name="app_name">DrawingApp</string>
    <string name="rotate_button_text">Rotate</string>
    <string name="translate_button_text">Translate</string>
    <string name="scale_button_text">Scale</string>
    <string name="exit_menu_item_text">Exit</string>
    <string name="smile_fragment_item_text">Smile Fragment</string>
    <string name="smiley_fragment_item_text">Smiley Fragment</string>
    <string name="painter_fragment_item_text">Painter</string>
    <string name="advanced_painter_fragment_item_text">Advanced Painter</string>
    <string name="xml_animation_mode_text">XML Animation</string>
    <string name="program_animation_mode_text">Program Animation</string>
    <string name="simple_animation_menu_item_text">Simple Animation</string>
    <string name="ball_simple_animation_menu_item_text">Simple Ball Animation</string>
    <string name="object_animation_text">Object Animation</string>
    <string name="custom_animation_mode_text">Custom Animation</string>
    <string name="cat_animation_menu_item_text">Cat Animation</string>
    <string name="xml_radio_button_text">XML</string>
</resources>
