<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <com.example.user.drawingapp.views.SmileyView
        android:id="@+id/smiley"
        android:layout_weight="12"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
    <LinearLayout
        android:id="@+id/buttons_container"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <Button
            android:id="@+id/rotate_button"
            android:text="@string/rotate_button_text"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/translate_button"
            android:text="@string/translate_button_text"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/scale_button"
            android:text="@string/scale_button_text"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </LinearLayout>
</LinearLayout>
