<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.user.drawingapp.MainActivity">

    <FrameLayout
        android:id="@+id/smile_container"
        android:layout_weight="12"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <LinearLayout
        android:id="@+id/buttons_container"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <Button
            android:id="@+id/rotate_button"
            android:text="@string/rotate_button_text"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/translate_button"
            android:text="@string/translate_button_text"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/scale_button"
            android:text="@string/scale_button_text"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </LinearLayout>
</LinearLayout>
