<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/radio_group_container"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="1"
            android:id="@+id/radio_group">

            <RadioButton
                android:layout_weight="0.5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xml_animation_mode_text"
                android:id="@+id/xml_animation_radio_button"
                android:checked="true"
                android:textSize="20sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/program_animation_mode_text"
                android:id="@+id/program_animation_radio_button"
                android:checked="false"
                android:textSize="20sp"
                android:layout_weight="0.5" />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:id="@+id/animate_result_text_view"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="30sp"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/add_scale_button"
                android:background="@drawable/ic_add_circle_outline_24dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp" />
            <Button
                android:id="@+id/minus_scale_button"
                android:background="@drawable/ic_remove_circle_outline_24dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp" />
        </LinearLayout>
        <LinearLayout

            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <Button
                android:background="@drawable/ic_redo_24dp"
                android:id="@+id/right_rotate_button"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp" />
            <Button
                android:background="@drawable/ic_undo_24dp1"
                android:id="@+id/left_rotate_button"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp" />

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/right_translate_button"
                android:background="@drawable/ic_arrow_forward_24dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp" />
            <Button
                android:id="@+id/left_translate_button"
                android:background="@drawable/ic_arrow_back_24dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp" />

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/add_alpha_button"
                android:background="@drawable/ic_notifications_24dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp" />
            <Button
                android:id="@+id/less_alpha_button"
                android:background="@drawable/ic_notifications_none_24dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
